[tool.poetry]
name = "pytrading212"
version = "0.2.7"
description = "Unofficial Trading212 API"
authors = ["HellAmbro <frambrosini1998@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
selenium = "^4.8.2"
webdriver-manager = "^3.8.5"
requests = "^2.28.2"
rich = "^13.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
